# std_ext

./: CMakeLists.txt  README.md
docs/: doxy.in
src/tuple/: tuple.hpp
src/type_traits/: type_traits_ext.hpp
src/type_traits/details/: details.hpp
src/type_traits/traits/: composite_type_categories.hpp  primary_type_categories.hpp  supported_operations.hpp  type_properties.hpp  type_relationships.hpp
src/utility/: utility.hpp
test/: CMakeLists.txt
test/tuple/: tuple.cpp
test/type_traits/: common.h  composite_type_categories.cpp  primary_type_categories.cpp  supported_operations.cpp  type_properties.cpp  type_relationships.cpp
test/utility/: utility.cpp
