#
# Tests configuration
#

set(BASE_SRC_DIR ${CMAKE_SOURCE_DIR}/${PROJECT_SRC_DIR})
set(SRC_TUPLE_DIR ${BASE_SRC_DIR}/tuple)
set(SRC_TYPE_TRAITS_DIR ${BASE_SRC_DIR}/type_traits)
set(SRC_UTILITY_DIR ${BASE_SRC_DIR}/utility)

set(
    TEST_INCLUDE_DIRS
    ${SRC_TUPLE_DIR}
    ${SRC_TYPE_TRAITS_DIR}
    ${SRC_UTILITY_DIR}
    ${GOOGLETEST_INCLUDE_DIRS}
)

set(
    TARGET_LINK_LIBS
    ${CMAKE_THREAD_LIBS_INIT}
    ${GOOGLETEST_LIBRARIES}
)

# List of available targets

set(TARGET_TEST_TUPLE test_tuple)
set(TARGET_TEST_COMPOSITE_TYPE_CATEGORIES test_composite_type_categories)
set(TARGET_TEST_PRIMARY_TYPE_CATEGORIES test_primary_type_categories)
set(TARGET_TEST_SUPPORTED_OPERATIONS test_supported_operations)
set(TARGET_TEST_TYPE_PROPERTIES test_type_properties)
set(TARGET_TEST_TYPE_RELATIONSHIPS test_type_relationships)
set(TARGET_TEST_UTILITY test_utility)

# Test TARGET_TEST_TUPLE

set(TARGET_TEST_TUPLE_SOURCES tuple/tuple.cpp)
add_executable(${TARGET_TEST_TUPLE} ${TARGET_TEST_TUPLE_SOURCES})
target_include_directories(${TARGET_TEST_TUPLE} PRIVATE ${TEST_INCLUDE_DIRS})
target_link_libraries(${TARGET_TEST_TUPLE} PRIVATE ${TARGET_LINK_LIBS})
add_test(NAME ${TARGET_TEST_TUPLE} COMMAND ${TARGET_TEST_TUPLE})

# Test TARGET_TEST_COMPOSITE_TYPE_CATEGORIES

set(TARGET_TEST_COMPOSITE_TYPE_CATEGORIES_SOURCES type_traits/composite_type_categories.cpp)
add_executable(${TARGET_TEST_COMPOSITE_TYPE_CATEGORIES} ${TARGET_TEST_COMPOSITE_TYPE_CATEGORIES_SOURCES})
target_include_directories(${TARGET_TEST_COMPOSITE_TYPE_CATEGORIES} PRIVATE ${TEST_INCLUDE_DIRS})
target_link_libraries(${TARGET_TEST_COMPOSITE_TYPE_CATEGORIES} PRIVATE ${TARGET_LINK_LIBS})
add_test(NAME ${TARGET_TEST_COMPOSITE_TYPE_CATEGORIES} COMMAND ${TARGET_TEST_COMPOSITE_TYPE_CATEGORIES})

# Test TARGET_TEST_PRIMARY_TYPE_CATEGORIES

set(TARGET_TEST_PRIMARY_TYPE_CATEGORIES_SOURCES type_traits/primary_type_categories.cpp)
add_executable(${TARGET_TEST_PRIMARY_TYPE_CATEGORIES} ${TARGET_TEST_PRIMARY_TYPE_CATEGORIES_SOURCES})
target_include_directories(${TARGET_TEST_PRIMARY_TYPE_CATEGORIES} PRIVATE ${TEST_INCLUDE_DIRS})
target_link_libraries(${TARGET_TEST_PRIMARY_TYPE_CATEGORIES} PRIVATE ${TARGET_LINK_LIBS})
add_test(NAME ${TARGET_TEST_PRIMARY_TYPE_CATEGORIES} COMMAND ${TARGET_TEST_PRIMARY_TYPE_CATEGORIES})

# Test TARGET_TEST_SUPPORTED_OPERATIONS

set(TARGET_TEST_SUPPORTED_OPERATIONS_SOURCES type_traits/supported_operations.cpp)
add_executable(${TARGET_TEST_SUPPORTED_OPERATIONS} ${TARGET_TEST_SUPPORTED_OPERATIONS_SOURCES})
target_include_directories(${TARGET_TEST_SUPPORTED_OPERATIONS} PRIVATE ${TEST_INCLUDE_DIRS})
target_link_libraries(${TARGET_TEST_SUPPORTED_OPERATIONS} PRIVATE ${TARGET_LINK_LIBS})
add_test(NAME ${TARGET_TEST_SUPPORTED_OPERATIONS} COMMAND ${TARGET_TEST_SUPPORTED_OPERATIONS})

# Test TARGET_TEST_TYPE_PROPERTIES

set(TARGET_TEST_TYPE_PROPERTIES_SOURCES type_traits/type_properties.cpp)
add_executable(${TARGET_TEST_TYPE_PROPERTIES} ${TARGET_TEST_TYPE_PROPERTIES_SOURCES})
target_include_directories(${TARGET_TEST_TYPE_PROPERTIES} PRIVATE ${TEST_INCLUDE_DIRS})
target_link_libraries(${TARGET_TEST_TYPE_PROPERTIES} PRIVATE ${TARGET_LINK_LIBS})
add_test(NAME ${TARGET_TEST_TYPE_PROPERTIES} COMMAND ${TARGET_TEST_TYPE_PROPERTIES})

# Test TARGET_TEST_TYPE_RELATIONSHIPS

set(TARGET_TEST_TYPE_RELATIONSHIPS_SOURCES type_traits/type_relationships.cpp)
add_executable(${TARGET_TEST_TYPE_RELATIONSHIPS} ${TARGET_TEST_TYPE_RELATIONSHIPS_SOURCES})
target_include_directories(${TARGET_TEST_TYPE_RELATIONSHIPS} PRIVATE ${TEST_INCLUDE_DIRS})
target_link_libraries(${TARGET_TEST_TYPE_RELATIONSHIPS} PRIVATE ${TARGET_LINK_LIBS})
add_test(NAME ${TARGET_TEST_TYPE_RELATIONSHIPS} COMMAND ${TARGET_TEST_TYPE_RELATIONSHIPS})

# Test TARGET_TEST_UTILITY

set(TARGET_TEST_UTILITY_SOURCES utility/utility.cpp)
add_executable(${TARGET_TEST_UTILITY} ${TARGET_TEST_UTILITY_SOURCES})
target_include_directories(${TARGET_TEST_UTILITY} PRIVATE ${TEST_INCLUDE_DIRS})
target_link_libraries(${TARGET_TEST_UTILITY} PRIVATE ${TARGET_LINK_LIBS})
add_test(NAME ${TARGET_TEST_UTILITY} COMMAND ${TARGET_TEST_UTILITY})
